--- a/css/_legalisation.scss
+++ b/css/_legalisation.scss
@@ -14,6 +14,7 @@
         font-weight: 500;
         line-height: 21px;
         color: #4b4a4a;
+        margin-left: 26px;
     }
     h4 {
         font-family: Golos;
@@ -62,7 +63,7 @@
                 font-size: 16px;
                 font-weight: 600;
                 line-height: 19px;
-                color: #cc0001;
+                color: #e21b88;
                 margin-bottom: 16px;
                 span {
                     color: #a326f7;
@@ -120,7 +121,7 @@
                 font-size: 16px;
                 font-weight: 600;
                 line-height: 19px;
-                color: #cc0001;
+                color: #e21b88;
                 margin: 16px 0;
             }
             .legalisation__text {
@@ -154,7 +155,7 @@
                 font-size: 16px;
                 font-weight: 500;
                 line-height: 19px;
-                color: #e21b88;
+                color: #a326f7;
                 margin-bottom: 16px;
             }
         }
@@ -283,8 +284,11 @@
                 font-size: 16px;
                 font-weight: 500;
                 line-height: 19px;
-                color: #cc0001;
+                color: #e21b88;
                 margin-bottom: 16px;
+                span {
+                    color: #a326f7;
+                }
             }
         }
         .laws {
