--- a/css/_entry.scss
+++ b/css/_entry.scss
@@ -23,7 +23,7 @@
         font-size: 19px;
         font-weight: 600;
         line-height: 19px;
-        color: #e21b88;
+        color: #4b4a4a;
         margin: 16px 0;
     }
     h4 {
