--- a/css/_legalisation.scss
+++ b/css/_legalisation.scss
@@ -14,7 +14,6 @@
         font-weight: 500;
         line-height: 21px;
         color: #4b4a4a;
-        margin-left: 26px;
     }
     h4 {
         font-family: Golos;
@@ -22,6 +21,7 @@
         font-weight: 500;
         line-height: 19px;
         color: #4b4a4a;
+        margin-bottom: 16px;
     }
     h5 {
         font-family: Golos;
@@ -29,10 +29,11 @@
         font-weight: 700;
         line-height: 19px;
         color: #4b4a4a;
+        margin-bottom: 16px;
         span {
-            color: #a326f7;
+            color: #e21b88;
             font-size: 16px;
-            font-weight: 500;
+            font-weight: 600;
         }
     }
     .demo {
@@ -63,12 +64,12 @@
                 font-size: 16px;
                 font-weight: 600;
                 line-height: 19px;
-                color: #e21b88;
+                color: #4b4a4a;
                 margin-bottom: 16px;
                 span {
-                    color: #a326f7;
-                    font-size: 16px;
-                    font-weight: 500;
+                    color: #e21b88;
+                    font-size: 14px;
+                    font-weight: 600;
                 }
             }
             .legalisation__text {
@@ -121,7 +122,7 @@
                 font-size: 16px;
                 font-weight: 600;
                 line-height: 19px;
-                color: #e21b88;
+                color: #4b4a4a;
                 margin: 16px 0;
             }
             .legalisation__text {
@@ -133,6 +134,7 @@
                 margin-bottom: 8px;
                 span {
                     color: #e21b88;
+                    font-weight: 600;
                 }
             }
             ul {
@@ -146,16 +148,16 @@
                     margin-bottom: 8px;
                     span {
                         font-weight: 600;
-                        color: #e21b88;
+                        color: #4b4a4a;
                     }
                 }
             }
             h6 {
                 font-family: Golos;
                 font-size: 16px;
-                font-weight: 500;
+                font-weight: 600;
                 line-height: 19px;
-                color: #a326f7;
+                color: #e21b88;
                 margin-bottom: 16px;
             }
         }
@@ -168,9 +170,9 @@
                 color: #4b4a4a;
                 margin-bottom: 16px;
                 span {
-                    color: #a326f7;
+                    color: #e21b88;
                     font-size: 16px;
-                    font-weight: 500;
+                    font-weight: 600;
                 }
             }
             h6 {
@@ -178,7 +180,7 @@
                 font-size: 16px;
                 font-weight: 500;
                 line-height: 19px;
-                color: #e21b88;
+                color: #4b4a4a;
                 margin-bottom: 16px;
             }
             .legalisation__text {
@@ -199,7 +201,7 @@
                 margin-bottom: 8px;
                 padding-left: 0;
                 span {
-                    color: #e21b88;
+                    color: #4b4a4a;
                     margin-bottom: 8px;
                 }
             }
@@ -213,7 +215,7 @@
                     color: #4b4a4a;
                     margin-bottom: 8px;
                     span {
-                        color: #e21b88;
+                        color: #4b4a4a;
                         margin-bottom: 8px;
                     }
                 }
@@ -253,7 +255,7 @@
                 color: #4b4a4a;
                 margin-bottom: 8px;
                 span {
-                    color: #e21b88;
+                    color: #4b4a4a;
                     margin-bottom: 8px;
                 }
             }
@@ -284,10 +286,12 @@
                 font-size: 16px;
                 font-weight: 500;
                 line-height: 19px;
-                color: #e21b88;
+                color: #4b4a4a;
                 margin-bottom: 16px;
                 span {
-                    color: #a326f7;
+                    color: #e21b88;
+                    font-weight: 600;
+                    font-size: 14px;
                 }
             }
         }
@@ -302,7 +306,7 @@
                     color: #4b4a4a;
                     margin-bottom: 8px;
                     span {
-                        color: #e21b88;
+                        color: #4b4a4a;
                         margin-bottom: 8px;
                     }
                 }
