--- a/css/_entry.scss
+++ b/css/_entry.scss
@@ -10,61 +10,209 @@
 }
 .entry__section {
     padding: 100px 16px 16px;
-    h2 {
+    h1 {
         color: #4b4a4a;
-        font-family: Golos;
+        font-family: Raleway;
         font-size: 24px;
         font-weight: 700;
         line-height: 27px;
+        text-align: center;
+        margin-bottom: 16px;
+    }
+    h2 {
+        color: #4b4a4a;
+        font-family: Raleway;
+        font-size: 21px;
+        font-weight: 700;
+        line-height: 24px;
         margin-bottom: 16px;
     }
     h3 {
-        font-family: Golos;
+        font-family: Raleway;
         font-size: 19px;
         font-weight: 600;
         line-height: 19px;
         color: #4b4a4a;
-        margin: 16px 0;
-    }
-    h4 {
-        font-family: Golos;
-        font-size: 16px;
-        font-weight: 700;
-        line-height: 19px;
-        color: #4b4a4a;
-        margin: 16px 0;
-    }
-    .links {
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        .entry__link {
-            margin-bottom: 16px;
+        margin-bottom: 8px;
+        span {
+            color: #e21b88;
+            font-size: 16px;
+        }
+        .link {
+            font-family: Raleway;
+            font-size: 16px;
+            font-weight: 400;
+            font-style: italic;
+            line-height: 19px;
+            text-decoration: none;
+            color: rgb(38, 38, 223);
             i {
-                margin-right: 8px;
-                font-size: 18px;
-                color: rgb(94, 164, 221);
+                font-size: 14px;
+                margin-right: 4px;
+            }
+            &:visited {
+                color: blueviolet;
             }
         }
     }
-    p {
-        font-family: Golos;
+    h4 {
+        font-family: Raleway;
+        font-size: 16px;
+        font-weight: 500;
+        font-style: italic;
+        line-height: 19px;
+        color: #4b4a4a;
+        margin-bottom: 8px;
+        span {
+            color: #e21b88;
+        }
+    }
+    h5 {
+        font-family: Raleway;
         font-size: 16px;
         font-weight: 500;
         line-height: 19px;
         color: #4b4a4a;
         margin-bottom: 8px;
     }
-    ol {
-        list-style: inside decimal;
-        li {
-            font-family: Golos;
+    h6 {
+        font-family: Raleway;
+        font-size: 16px;
+        font-weight: 400;
+        font-style: italic;
+        line-height: 19px;
+        color: #4b4a4a;
+        margin-bottom: 8px;
+    }
+    .links {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        margin-bottom: 16px;
+        .link {
+            font-family: Raleway;
             font-size: 16px;
-            font-weight: 500;
+            font-weight: 400;
+            font-style: italic;
             line-height: 19px;
-            color: #4b4a4a;
-            margin-bottom: 8px;
+            text-decoration: none;
+            color: rgb(38, 38, 223);
+            i {
+                font-size: 14px;
+                margin-right: 4px;
+            }
+            &:visited {
+                color: blueviolet;
+            }
         }
     }
-
+    p {
+        font-family: Raleway;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 19px;
+        color: #4b4a4a;
+        margin-bottom: 16px;
+        span {
+            color: #e21b88;
+        }
+        .link {
+            font-family: Raleway;
+            font-size: 16px;
+            font-weight: 400;
+            font-style: italic;
+            line-height: 19px;
+            text-decoration: none;
+            color: rgb(38, 38, 223);
+            i {
+                font-size: 14px;
+                margin-right: 4px;
+            }
+            &:visited {
+                color: blueviolet;
+            }
+        }
+    }
+    ol {
+        list-style: inside decimal;
+        margin-bottom: 16px;
+        li {
+            font-family: Raleway;
+            font-size: 16px;
+            font-weight: 400;
+            line-height: 19px;
+            color: #4b4a4a;
+            margin-bottom: 4px;
+            span {
+                color: #e21b88;
+            }
+            .link {
+                font-family: Raleway;
+                font-size: 16px;
+                font-weight: 400;
+                font-style: italic;
+                line-height: 19px;
+                text-decoration: none;
+                color: rgb(38, 38, 223);
+                i {
+                    font-size: 14px;
+                    margin-right: 4px;
+                }
+                &:visited {
+                    font-size: 12px;
+                    color: blueviolet;
+                }
+            }
+        }
+    }
+    .box {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        align-items: center;
+        flex-wrap: wrap;
+        @include for-tablet-portrait {
+            justify-content: center;
+        }
+        @include for-phone-only {
+            justify-content: center;
+        }
+        .box__link {
+            width: 17%;
+            margin: 16px;
+            text-decoration: none;
+            @include for-tablet-portrait {
+                width: 27%;
+            }
+            @include for-phone-only {
+                width: 39%;
+            }
+            .item {
+                padding: 16px 8px 8px;
+                text-align: center;
+                height: 120px;
+                box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+                .logo {
+                    height: 46px;
+                }
+                i {
+                    font-size: 46px;
+                }
+                .fa-telegram {
+                    color: #3390ec;
+                }
+                .fa-facebook-square {
+                    color: #0674e7;
+                }
+                .title {
+                    font-family: Raleway;
+                    font-size: 16px;
+                    font-weight: 600;
+                    line-height: 19px;
+                    color: #4b4a4a;
+                    margin-top: 16px;
+                }
+            }
+        }
+    }
 }
