--- a/css/_vaccinations.scss
+++ b/css/_vaccinations.scss
@@ -2,30 +2,31 @@
     padding: 100px 16px 16px;
     h2 {
         color: #4b4a4a;
-        font-family: Golos;
-        font-size: 24px;
-        font-weight: 700;
+        font-family: Raleway;
+        font-size: 21px;
+        font-weight: 600;
         line-height: 27px;
         margin-bottom: 16px;
     }
     h3 {
-        font-family: Golos;
+        font-family: Raleway;
         font-size: 19px;
         font-weight: 600;
         line-height: 19px;
-        color: #e21b88;
+        color: #4b4a4a;
         margin: 16px 0;
     }
     h4 {
-        font-family: Golos;
+        font-family: Raleway;
         font-size: 16px;
-        font-weight: 700;
+        font-weight: 600;
+        font-style: italic;
         line-height: 19px;
         color: #4b4a4a;
         margin: 16px 0;
     }
     p {
-        font-family: Golos;
+        font-family: Raleway;
         font-size: 16px;
         font-weight: 500;
         line-height: 19px;
@@ -35,16 +36,33 @@
     ol {
         list-style: inside decimal;
         li {
-            font-family: Golos;
+            font-family: Raleway;
             font-size: 16px;
             font-weight: 500;
             line-height: 19px;
             color: #4b4a4a;
+            font-style: italic;
             margin-bottom: 8px;
             span {
                 color: #e21b88;
             }
         }
     }
-
+    h5 {
+        font-family: Raleway;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 19px;
+        color: #4b4a4a;
+        margin: 16px 0;
+    }
+    h6 {
+        font-family: Raleway;
+        font-size: 14px;
+        font-weight: 400;
+        font-style: italic;
+        line-height: 19px;
+        color: #4b4a4a;
+        margin: 16px 0;
+    }
 }
