--- a/css/style.scss
+++ b/css/style.scss
@@ -50,3 +50,61 @@
 a:focus {
     outline: none;
 }
+// h1 {
+//     color: #4b4a4a;
+//     font-family: Raleway;
+//     font-size: 24px;
+//     font-weight: 700;
+//     line-height: 27px;
+//     margin-bottom: 16px;
+// }
+// h2 {
+//     color: #4b4a4a;
+//     font-family: Raleway;
+//     font-size: 21px;
+//     font-weight: 700;
+//     line-height: 27px;
+//     margin-bottom: 16px;
+// }
+// h3 {
+//     font-family: Raleway;
+//     font-size: 19px;
+//     font-weight: 600;
+//     line-height: 19px;
+//     color: #4b4a4a;
+//     margin: 16px 0;
+// }
+// h4 {
+//     font-family: Raleway;
+//     font-size: 16px;
+//     font-weight: 600;
+//     // font-style: italic;
+//     line-height: 19px;
+//     color: #4b4a4a;
+//     margin: 16px 0;
+// }
+// h5 {
+//     font-family: Raleway;
+//     font-size: 16px;
+//     font-weight: 500;
+//     line-height: 19px;
+//     color: #4b4a4a;
+//     margin: 16px 0;
+// }
+// h6 {
+//     font-family: Raleway;
+//     font-size: 14px;
+//     font-weight: 400;
+//     font-style: italic;
+//     line-height: 19px;
+//     color: #4b4a4a;
+//     margin: 16px 0;
+// }
+// p {
+//     font-family: Raleway;
+//     font-size: 16px;
+//     font-weight: 500;
+//     line-height: 19px;
+//     color: #4b4a4a;
+//     margin-bottom: 8px;
+// }
