--- a/css/_entry.scss
+++ b/css/_entry.scss
@@ -16,7 +16,7 @@
         font-size: 24px;
         font-weight: 700;
         line-height: 27px;
-        text-align: center;
+        text-align: left;
         margin-bottom: 16px;
     }
     h2 {
@@ -33,7 +33,7 @@
         font-weight: 600;
         line-height: 19px;
         color: #4b4a4a;
-        margin-bottom: 8px;
+        margin-bottom: 16px;
         span {
             color: #e21b88;
             font-size: 16px;
@@ -74,6 +74,25 @@
         line-height: 19px;
         color: #4b4a4a;
         margin-bottom: 8px;
+        span {
+            color: #e21b88;
+        }
+        .link {
+            font-family: Raleway;
+            font-size: 16px;
+            font-weight: 400;
+            font-style: italic;
+            line-height: 19px;
+            text-decoration: none;
+            color: rgb(38, 38, 223);
+            i {
+                font-size: 14px;
+                margin-right: 4px;
+            }
+            &:visited {
+                color: blueviolet;
+            }
+        }
     }
     h6 {
         font-family: Raleway;
@@ -83,6 +102,42 @@
         line-height: 19px;
         color: #4b4a4a;
         margin-bottom: 8px;
+        span {
+            color: #e21b88;
+        }
+    }
+    .rent__box {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+        .links {
+            .link {
+                font-family: Raleway;
+                font-size: 19px;
+                font-weight: 400;
+                font-style: italic;
+                line-height: 24px;
+                text-decoration: none;
+                color: rgb(38, 38, 223);
+                @include for-tablet-portrait {
+                    font-size: 16px;
+                }
+                @include for-phone-only {
+                    font-size: 16px;
+                }
+                i {
+                    font-size: 14px;
+                    margin-right: 4px;
+                }
+                &:visited {
+                    color: blueviolet;
+                }
+            }
+        }
+        .text {
+            margin-bottom: 0;
+        }
     }
     .links {
         display: flex;
@@ -106,7 +161,7 @@
             }
         }
     }
-    p {
+    .text {
         font-family: Raleway;
         font-size: 16px;
         font-weight: 400;
@@ -135,6 +190,38 @@
     }
     ol {
         list-style: inside decimal;
+        margin-bottom: 16px;
+        li {
+            font-family: Raleway;
+            font-size: 16px;
+            font-weight: 400;
+            line-height: 19px;
+            color: #4b4a4a;
+            margin-bottom: 4px;
+            span {
+                color: #e21b88;
+            }
+            .link {
+                font-family: Raleway;
+                font-size: 16px;
+                font-weight: 400;
+                font-style: italic;
+                line-height: 19px;
+                text-decoration: none;
+                color: rgb(38, 38, 223);
+                i {
+                    font-size: 14px;
+                    margin-right: 4px;
+                }
+                &:visited {
+                    font-size: 12px;
+                    color: blueviolet;
+                }
+            }
+        }
+    }
+    ul {
+        list-style: inside;
         margin-bottom: 16px;
         li {
             font-family: Raleway;
@@ -215,4 +302,166 @@
             }
         }
     }
+
+    .demo {
+        h3 {
+            font-weight: 500;
+        }
+        .subsection {
+            h4 {
+                font-family: Raleway;
+                font-size: 16px;
+                font-weight: 500;
+                font-style: italic;
+                line-height: 19px;
+                color: #4b4a4a;
+                margin-bottom: 8px;
+                span {
+                    color: #e21b88;
+                }
+            }
+            h5 {
+                font-family: Raleway;
+                font-size: 16px;
+                font-weight: 500;
+                line-height: 19px;
+                color: #4b4a4a;
+                margin-bottom: 16px;
+            }
+            h6 {
+                font-family: Raleway;
+                font-size: 16px;
+                font-weight: 400;
+                font-style: italic;
+                line-height: 19px;
+                color: #4b4a4a;
+                margin-bottom: 8px;
+            }
+            .links {
+                display: flex;
+                flex-direction: column;
+                justify-content: flex-start;
+                margin-bottom: 16px;
+                .link {
+                    font-family: Raleway;
+                    font-size: 16px;
+                    font-weight: 400;
+                    font-style: italic;
+                    line-height: 19px;
+                    text-decoration: none;
+                    color: rgb(38, 38, 223);
+                    i {
+                        font-size: 14px;
+                        margin-right: 4px;
+                    }
+                    &:visited {
+                        color: blueviolet;
+                    }
+                }
+            }
+            .text {
+                font-family: Raleway;
+                font-size: 16px;
+                font-weight: 400;
+                line-height: 19px;
+                color: #4b4a4a;
+                margin-bottom: 16px;
+                span {
+                    color: #e21b88;
+                }
+                .link {
+                    font-family: Raleway;
+                    font-size: 16px;
+                    font-weight: 400;
+                    font-style: italic;
+                    line-height: 19px;
+                    text-decoration: none;
+                    color: rgb(38, 38, 223);
+                    i {
+                        font-size: 14px;
+                        margin-right: 4px;
+                    }
+                    &:visited {
+                        color: blueviolet;
+                    }
+                }
+            }
+            ol {
+                list-style: inside decimal;
+                margin-bottom: 16px;
+                li {
+                    font-family: Raleway;
+                    font-size: 16px;
+                    font-weight: 400;
+                    line-height: 19px;
+                    color: #4b4a4a;
+                    margin-bottom: 4px;
+                    span {
+                        color: #e21b88;
+                    }
+                    .link {
+                        font-family: Raleway;
+                        font-size: 16px;
+                        font-weight: 400;
+                        font-style: italic;
+                        line-height: 19px;
+                        text-decoration: none;
+                        color: rgb(38, 38, 223);
+                        i {
+                            font-size: 14px;
+                            margin-right: 4px;
+                        }
+                        &:visited {
+                            font-size: 12px;
+                            color: blueviolet;
+                        }
+                    }
+                }
+            }
+            ul {
+                list-style: inside;
+                margin-bottom: 16px;
+                li {
+                    font-family: Raleway;
+                    font-size: 16px;
+                    font-weight: 400;
+                    line-height: 19px;
+                    color: #4b4a4a;
+                    margin-bottom: 4px;
+                    span {
+                        color: #e21b88;
+                    }
+                    .link {
+                        font-family: Raleway;
+                        font-size: 16px;
+                        font-weight: 400;
+                        font-style: italic;
+                        line-height: 19px;
+                        text-decoration: none;
+                        color: rgb(38, 38, 223);
+                        i {
+                            font-size: 14px;
+                            margin-right: 4px;
+                        }
+                        &:visited {
+                            font-size: 12px;
+                            color: blueviolet;
+                        }
+                    }
+                }
+            }
+        }
+    }
+    .about__item {
+        .about__title {
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-start;
+            i {
+                margin-right: 8px;
+            }
+        }
+        
+    }
+
 }
