--- a/css/_header.scss
+++ b/css/_header.scss
@@ -158,18 +158,16 @@ header {
                 display: block;
                 position: fixed;
                 visibility: hidden;
-                top: 0;
+                top:68px;
                 left: -100%;
                 width: 100%;
                 height: 100%;
-                margin-top: 70px;
                 padding: 16px 0;
                 list-style: none;
                 backdrop-filter: blur(4px);
                 background: rgb(255,255,255);
-                background: linear-gradient(180deg, rgb(255 255 255) 0%, rgba(230, 16, 16, 0.703985818) 67%, white 100%);
-
-                box-shadow: 1px 8px 8px rgb(0 0 0 / 20%);
+                background: linear-gradient(180deg, #ffffff 0%, rgba(230, 16, 16, 0.703985818) 67%, white 100%);
+                box-shadow: 0px 5px 5px -5px rgba(87, 89, 91, 0.6) inset;
                 transition-duration: .25s;
 
                 .navigation-mobile__item {
