--- a/css/_legalisation.scss
+++ b/css/_legalisation.scss
@@ -1,44 +1,93 @@
+@mixin for-phone-only {
+    @media (max-width: 599px) {
+        @content;
+    }
+}
+@mixin for-tablet-portrait {
+    @media (min-width: 599px) and (max-width: 870px) {
+        @content;
+    }
+}
+
 .legalisation__section {
     padding: 100px 16px 16px;
-    h2 {
+    h1 {
         color: #4b4a4a;
-        font-family: Golos;
+        font-family: Raleway;
         font-size: 24px;
         font-weight: 700;
-        line-height: 24px;
-        margin-bottom:24px;
-    }
-    h3 {
-        font-family: Golos;
-        font-size: 19px;
-        font-weight: 500;
-        line-height: 21px;
-        color: #4b4a4a;
-    }
-    h4 {
-        font-family: Golos;
-        font-size: 16px;
-        font-weight: 500;
-        line-height: 19px;
-        color: #4b4a4a;
+        line-height: 27px;
+        text-align: center;
         margin-bottom: 16px;
     }
-    h5 {
-        font-family: Golos;
-        font-size: 12px;
+    h2 {
+        color: #4b4a4a;
+        font-family: Raleway;
+        font-size: 21px;
         font-weight: 700;
+        line-height: 24px;
+        margin-bottom: 16px;
+    }
+    h3 {
+        font-family: Raleway;
+        font-size: 19px;
+        font-weight: 600;
         line-height: 19px;
         color: #4b4a4a;
         margin-bottom: 16px;
         span {
             color: #e21b88;
             font-size: 16px;
-            font-weight: 600;
+        }
+        .link {
+            font-family: Raleway;
+            font-size: 16px;
+            font-weight: 400;
+            font-style: italic;
+            line-height: 19px;
+            text-decoration: none;
+            color: rgb(38, 38, 223);
+            i {
+                font-size: 14px;
+                margin-right: 4px;
+            }
+            &:visited {
+                color: blueviolet;
+            }
         }
     }
+    h4 {
+        font-family: Raleway;
+        font-size: 16px;
+        font-weight: 500;
+        font-style: italic;
+        line-height: 19px;
+        color: #4b4a4a;
+        margin-bottom: 8px;
+        span {
+            color: #e21b88;
+        }
+    }
+    h5 {
+        font-family: Raleway;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 19px;
+        color: #4b4a4a;
+        margin-bottom: 8px;
+    }
+    h6 {
+        font-family: Raleway;
+        font-size: 16px;
+        font-weight: 400;
+        font-style: italic;
+        line-height: 19px;
+        color: #4b4a4a;
+        margin-bottom: 8px;
+    }
     .demo {
-        .translate {
-            .legalisation__translate {
+        .subsection {
+            .text {
                 font-family: Golos;
                 font-size: 16px;
                 font-weight: 500;
@@ -58,7 +107,7 @@
                 }
             }
         }
-        .apostil {
+        .subsection {
             h4 {
                 font-family: Golos;
                 font-size: 16px;
@@ -108,7 +157,7 @@
                         color: #4b4a4a;
             }
         }
-        .residence {
+        .subsection {
             h5 {
                 font-family: Golos;
                 font-size: 16px;
@@ -161,7 +210,7 @@
                 margin-bottom: 16px;
             }
         }
-        .quotas {
+        .subsection {
             h4 {
                 font-family: Golos;
                 font-size: 16px;
@@ -236,7 +285,7 @@
                         color: #4b4a4a;
             }
         }
-        .guides {
+        .subsection {
             h5 {
                 font-family: Golos;
                 font-size: 16px;
@@ -246,7 +295,7 @@
                 margin-bottom: 16px;
             }
         }
-        .auto {
+        .subsection {
             .legalisation__text {
                 font-family: Golos;
                 font-size: 16px;
@@ -295,7 +344,7 @@
                 }
             }
         }
-        .laws {
+        .subsection {
             ol {
                 li {
                     list-style: decimal inside;
